@@ -4,7 +4,7 @@
 ;;  Copyright (c) 2003 Scheme Arts, L.L.C., All rights reserved.
 ;;  Copyright (c) 2003 Time Intermedia Corporation, All rights reserved.
 ;;
-;; $Id: kahua.el.in,v 1.9 2007/03/16 04:26:38 bizenn Exp $
+;; $Id: kahua.el.in,v 1.10 2007/04/19 05:13:21 bizenn Exp $
 ;;
 
 (require 'comint)
@@ -49,7 +49,7 @@
   :type 'string
   :group 'kahua)
 
-(defcustom kahua-site-bundle ""
+(defcustom kahua-site-bundle nil
   "Site Bundle for kahua-shell and kahua-admin."
   :type 'string
   :group 'kahua)
@@ -104,13 +104,16 @@ Editing commands are similar to those of 'scheme-mode'."
     ""))
 (defun kahua-read-site ()
   (let ((insert-default-directory nil))
-    (read-directory-name "site bundle: " nil nil nil kahua-site-bundle)))
+    (let ((site (read-directory-name "site bundle: " nil nil nil kahua-site-bundle)))
+      (if (string= site "")
+	  nil
+	site))))
 
 (defun kahua-command-buffer-setup (bufname comname command host user site)
   (if (not (comint-check-proc bufname))
       (let* ((use-ssh          (and kahua-ssh-mode (not (string= host ""))))
              (program          (if use-ssh "ssh" command))
-             (kahua-shell-args (if (string= site "")
+             (kahua-shell-args (if (or (not site) (string= site ""))
                                    '() (list "-S" (expand-file-name site))))
              (args             (if use-ssh
                                    `(,@kahua-ssh-opts
